[package]
authors = ["Cryotheum"]
categories = ["games"]
description = "Safe wrapper for the Steamworks SDK."
edition = "2021"
keywords = ["steam", "gamedev"]
license = "MIT / Apache-2.0"
name = "steamworks-x"
repository = "https://github.com/Cryotheus/steamworks-x-rs"
rust-version = "1.71.1"
version = "0.11.0"

[features]
default = []
raw-bindings = []

[workspace]
members = [
    "./steamworks-x-sys",
]

[dependencies]
bitflags = "1.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }
steamworks-x-sys = { path = "./steamworks-x-sys", version = "0.11.0" }
thiserror = "1.0"

[dev-dependencies]
serial_test = "1"
