[package]
authors = ["Cryotheum"]
build = "build.rs"
description = "Provides raw bindings to the steamworks sdk"
edition = "2021"
license = "MIT / Apache-2.0"
name = "steamworks-x-sys"
repository = "https://github.com/Cryotheus/steamworks-x-rs"
rust-version = "1.71.1"
version = "0.11.0"

[features]
default = []
rebuild-bindings = ["bindgen"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.4", optional = true }
